# Asteroids

./: .gitignore  CMakeLists.txt  README.md
src/: game.cpp  game.h  main.cpp
